--- a/Bootstrap/bootstrap_template/bootstrap_template.html
+++ b/Bootstrap/bootstrap_template/bootstrap_template.html
@@ -13,21 +13,22 @@
   <body>
     
     <div class="container">
-     <p>My First 5 Weeks at CodeFactory</p>
-    <p>
+     <p class="lead">My First 5 Weeks at CodeFactory</p>
+    <p class="lead">
       I've finished my five weeks at CodeFactory. Here are some of the things I've learned so far:
     </p>
-    <p>Git and <small>GitHub</small></p>
+    <p class="lead">Git and <small>GitHub</small></p>
+    <p><abbr title="attribute">attr</abbr></p>
     <ul>
-      <li>What is VC, Necessity, What is Git?</li>
+      <li class="text-danger">What is VC, Necessity, What is Git?</li>
       <li>Installation & Config via Command Line</li>
       <li>Commits, Best Practices, Standards</li>
       <li>Get GitHub Repository</li>
       <li>Merging multiple Git branches back together.</li>
-      <li>Cloning a project from GitHub to my local machine.</li>
+      <li><span class="badge badge-secondary">New</span>Cloning a project from GitHub to my local machine.</li>
       <li>Publishing a website on GitHub pages.</li>
     </ul>
-    <p>HTML</p>
+    <p><abbr title="hallo">HTML</abbr></p>
     <ul>
       <li>Using HTML tags to create websites.</li>
       <li>Indenting and organize HTML correctly.</li>
@@ -36,7 +37,7 @@
       <li>Using both spans and divs.</li>
       <li>Adding d IDs to style HTML with CSS.</li>
     </ul>
-    <p>CSS</p>
+    <p class="text-muted">CSS</p>
     <ul>
       <li>Creating a stylesheet.</li>
       <li>Using CSS selectors to specify an HTML element.</li>
@@ -47,7 +48,7 @@
       <li>The importance of responsive design.</li>
       <li>How to use media queries to dynamically change the appearance of a site based on the user's viewport.</li>
     </ul>
-    <p>JavaScript</p>
+    <p class="collapsing" id="collapseExample">JavaScript</p>
     <ul>
       <li>JavaScript vs CSS3</li>
       <li>What is programming</li>
@@ -74,12 +75,17 @@
       <li>Functions</li>
     </ul>
     <p >Bootstrap</p>
-    <ul>
-      <li>Introduction to the Bootstrap</li>
-      <li>Downloading Bootstrap</li>
-      <li>Bootstrap CDN</li>
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+  </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <li class="dropdown-item" href="#">Introduction to the Bootstrap</li>
+      <li class="dropdown-item" href="#">Downloading Bootstrap</li>
+      <li class="dropdown-item" href="#">Bootstrap CDN</li>
     </ul>
   </div>
+  <p>
+</div>
 
 
     <!-- Optional JavaScript -->
